# gpu-irange

./: .gitignore  BUG_FIXES_PROMPT.md  CMakeLists.txt  PQ_ANALYSIS.md  README.md  README_FAISS_PQ.md  README_PQ_IMPLEMENTATION.md  RESULTS_ORGANIZATION.md  THREADING_STRATEGY.md  build_all_variations.sh  build_gist_indexes.sh  patch_kernel.sh  run_all_searches.sh  run_all_searches_gpu.sh  test_run.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
cude_version/: CMakeLists.txt  GPU_PROFILING_TUTORIAL.md  Makefile  PARALLEL_IMPLEMENTATION.md  gpu_heap.cuh  gpu_index.cuh  gpu_pq_distance.cuh  gpu_search.cuh  gpu_search_pq.cuh  gpu_search_updated.cuh  gpu_visited.cuh  hello  hello.cu  hello_clean.cu  hello_pq.cu
cude_version/tests/: loading_test.cuh
include/: construction.h  iRG_search.h  iRG_search_multi.h  utils.h
python/: aggregate_results.py  test_persitent_run.py  validate_data.py
python/gist/: convert_gist_to_irangegraph.py  read_wit_data.py
python/plots/: README.md  plot_cpu_comparison.py  plot_gpu_versions.py  plot_gpu_vs_cpu.py
python/youtube8m/: check_yt8m_bins.py  convert_youtube8m_to_irangegraph.py
scripts/: NEW_SCRIPTS_README.md  QUICK_SCREEN_SETUP.md  build_gist_indexes.sh  build_indexes.sh  check_setup.sh  config.sh  download_data.sh  download_plots.sh  execute_experiments.sh  make_pq.sh  migrate_results.sh  run_all_searches.sh  run_all_searches_gpu.sh  run_all_searches_gpu_pq.sh  run_searches.sh  run_tests.sh  setup_folders.sh
scripts/idun/: README.md  SETUP_GUIDE.sh  configure_jobs.sh  cpu_job.slurm  cpu_search_job.slurm  download_and_prepare_gist.slurm  download_and_prepare_youtube8m.slurm  gist_build_indexes.slurm  gpu_job.slurm  gpu_pq_all_job.slurm  gpu_pq_gist_job.slurm  gpu_pq_search_job.slurm  gpu_search_job.slurm  log_sysinfo.sh  plot_results_job.slurm  pq_training_job.slurm  quick_test.slurm  submit_cpu_tests.sh  submit_gist_pipeline.sh  submit_gpu_pq_gist.sh  submit_gpu_pq_tests.sh  submit_gpu_tests.sh  submit_pq_training.sh  submit_yt8m_pipeline.sh  yt8m_build_indexes.slurm  yt8m_cpu_search.slurm
tests/: CMakeLists.txt  pq_compress_only.cpp  pq_encode.cpp  pq_manual_distance.cpp  search.cpp
